made code snippet responsive and fixed spacing issue

--- a/_sass/components/_snippet.scss
+++ b/_sass/components/_snippet.scss
@@ -3,3 +3,8 @@
   padding: 1em;
   background: whitesmoke;
 }
+
+pre {
+    white-space: pre-wrap;
+    word-wrap: break-word;
+}
