--- a/_sass/layouts/_blog.scss
+++ b/_sass/layouts/_blog.scss
@@ -34,6 +34,7 @@
   margin: 3em 0;
   li {
     list-style: none;
+    margin: 0 0 5em 0;
   }
 
   a {
